[gd_scene load_steps=4 format=3 uid="uid://bky0sqoap6ank"]

[ext_resource type="Script" uid="uid://d4aayno647ol0" path="res://Interface/Pause_menu/pause_menu.gd" id="1_bfytw"]
[ext_resource type="FontFile" uid="uid://cty2cnsddqs1x" path="res://Resource/Font/Silver.ttf" id="1_bml2b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfytw"]
bg_color = Color(0.180392, 0, 0.0235294, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="PauseMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bfytw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -183.5
offset_right = 236.0
offset_bottom = 183.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bfytw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -145.5
offset_right = 204.5
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 0.67451, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_bml2b")
theme_override_font_sizes/font_size = 70
text = "Resume"
flat = true

[node name="option" type="Button" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 0.67451, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_bml2b")
theme_override_font_sizes/font_size = 70
text = "Options"
flat = true

[node name="exit" type="Button" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 1, 0.67451, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_bml2b")
theme_override_font_sizes/font_size = 70
text = "Exit"
flat = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
